[FIX] web_enterprise: only hide checkboxes column on mobile
In a previous commit, checkboxes column has been replaced by
a long tap to select multiple records.
The problem is that all the first columns were hidden and not
just the wanted one.
For example, embedded editable list view for x2many field.
In this case, you don't necessarily have checkboxes.

Anyway, the best is to be sure to hide the first column only
if it contains checkboxes.

Related commit: https://github.com/odoo/enterprise/commit/ab8932f8958be1329f28af0d2ae01c6643af8ac6

Task-id: 2387621
X-original-commit: 0c1a1f65e450013484f90c4155c00a3bb9da9771

--- a/web_enterprise/static/src/scss/list_view.scss
+++ b/web_enterprise/static/src/scss/list_view.scss
@@ -191,12 +191,13 @@
     }
 
     .o_web_client.o_touch_device .o_content table.o_list_table.table tr > {
-        :first-child {
+        .o_list_record_selector:first-child {
             display: none;
-        }
-        // first-child will be hidden so add left padding to second child
-        :nth-child(2) {
-            padding-left: $o-horizontal-padding!important;
+
+            // first-child will be hidden so add left padding to second child
+            & + * {
+                padding-left: $o-horizontal-padding!important;
+            }
         }
     }
 }
